; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_common.c___vcc_insert_socket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_common.c___vcc_insert_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlist_head = type { i32 }
%struct.sock = type { i32 }
%struct.atm_vcc = type { i32 }

@vcc_hash = common dso_local global %struct.hlist_head* null, align 8
@VCC_HTABLE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @__vcc_insert_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__vcc_insert_socket(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.atm_vcc*, align 8
  %4 = alloca %struct.hlist_head*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %5 = load %struct.sock*, %struct.sock** %2, align 8
  %6 = call %struct.atm_vcc* @atm_sk(%struct.sock* %5)
  store %struct.atm_vcc* %6, %struct.atm_vcc** %3, align 8
  %7 = load %struct.hlist_head*, %struct.hlist_head** @vcc_hash, align 8
  %8 = load %struct.atm_vcc*, %struct.atm_vcc** %3, align 8
  %9 = getelementptr inbounds %struct.atm_vcc, %struct.atm_vcc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @VCC_HTABLE_SIZE, align 4
  %12 = sub nsw i32 %11, 1
  %13 = and i32 %10, %12
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.hlist_head, %struct.hlist_head* %7, i64 %14
  store %struct.hlist_head* %15, %struct.hlist_head** %4, align 8
  %16 = load %struct.atm_vcc*, %struct.atm_vcc** %3, align 8
  %17 = getelementptr inbounds %struct.atm_vcc, %struct.atm_vcc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @VCC_HTABLE_SIZE, align 4
  %20 = sub nsw i32 %19, 1
  %21 = and i32 %18, %20
  %22 = load %struct.sock*, %struct.sock** %2, align 8
  %23 = getelementptr inbounds %struct.sock, %struct.sock* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  %24 = load %struct.sock*, %struct.sock** %2, align 8
  %25 = load %struct.hlist_head*, %struct.hlist_head** %4, align 8
  %26 = call i32 @sk_add_node(%struct.sock* %24, %struct.hlist_head* %25)
  ret void
}

declare dso_local %struct.atm_vcc* @atm_sk(%struct.sock*) #1

declare dso_local i32 @sk_add_node(%struct.sock*, %struct.hlist_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
